@@ -10,6 +10,7 @@ A.F.I...S. [ZBXNEXT-4119] implemented tag based permissions (miks, Oleg, Sasha, 
 ..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)
 
 Bug fixes:
+..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
 ..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
 ........S. [ZBX-13613] improved a history syncer when backend elasticsearch is not available (MVekslers)
 .......PS. [ZBX-13510] fixed error of execution "make dbschema" for NetBSD (MVekslers)
@@ -207,6 +208,7 @@ A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zal
 A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)
 
 Bug fixes:
+..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
 ..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
 ........S. [ZBX-13613] improved a history syncer when backend elasticsearch is not available (MVekslers)
 ...G...... [ZBX-13544] fixed agent crashes when using regex with 'Log' item for Mac OSX (MVekslers)
